--- a/creditors_master/templates/creditors_master/creditors_form.html
+++ b/creditors_master/templates/creditors_master/creditors_form.html
@@ -9,9 +9,11 @@
               <div class="card-header">
                 <h3 class="card-title" textalign="center"> Creditors Entry Form </h3>
               </div>
-              <!-- /.card-header -->
+
+                <!-- /.card-header -->
               <!-- form start -->
               <div method="post">
+
               {% csrf_token %}
             <!-- /.form group -->
                     <hr/>
@@ -300,15 +302,14 @@
 
                     </div>
 
+                  <div class="card-footer" align="center">
+                  <button type="submit" class="btn btn-primary">Submit</button>
+                  </div>
+
                   </div>
               </div>
 
-                  <div class="card-footer" align="center">
-                  <button type="submit" class="btn btn-primary">Submit</button>
-
-                </div>
-
-              </form>
+{#                </form>#}
 
             </div>
                 <!-- /.card-body -->
