--- a/creditors_payment/templates/creditors_payment/payment_detail.html
+++ b/creditors_payment/templates/creditors_payment/payment_detail.html
@@ -4,6 +4,8 @@
     <h3 class="profile-username text-center"> Creditors Payment Details </h3>
 <hr/>
 
+    <div class="row">
+
         <div class="col-md-6">
 
             <div class="card card-primary card-outline" class="col-md-4">
@@ -43,7 +45,7 @@
 
     </div>
 
-    <div class="col-md-6" align="left">
+        <div class="col-md-6" align="left">
 
             <div class="card card-primary card-outline" class="col-md-4">
               <div class="card-body box-profile">
@@ -72,6 +74,8 @@
               </div>
 
             </div>
+
+    </div>
 
     </div>
 
