--- a/employee_payment/templates/employee_payment/employee_p_detail.html
+++ b/employee_payment/templates/employee_payment/employee_p_detail.html
@@ -3,7 +3,9 @@
 
     <h3 class="profile-username text-center"> Employees Payment Details </h3>
 <hr/>
-    <div class="col-md-5">
+    <div class="row">
+
+        <div class="col-md-5">
 
             <div class="card card-primary card-outline" class="col-md-4">
               <div class="card-body box-profile">
@@ -42,7 +44,7 @@
 
     </div>
 
-    <div class="col-md-5">
+        <div class="col-md-5">
 
             <div class="card card-primary card-outline" class="col-md-4">
               <div class="card-body box-profile">
@@ -74,6 +76,8 @@
               </div>
 
             </div>
+    </div>
+
     </div>
 
 {% endblock %}
