--- a/nozzlle_master/templates/nozzlle_master/nozzlle_form.html
+++ b/nozzlle_master/templates/nozzlle_master/nozzlle_form.html
@@ -10,7 +10,7 @@
     <!-- general form elements -->
             <div class="card card-primary">
               <div class="card-header">
-                <h3 class="card-title">Nozzlle Entry Form</h3>
+                <h4 align="center">Nozzlle Entry Form</h4>
               </div>
               <!-- /.card-header -->
               <!-- form start -->
