--- a/employee_master/templates/employee_master/employee_detail.html
+++ b/employee_master/templates/employee_master/employee_detail.html
@@ -1,7 +1,8 @@
 {{% extends "client/layout.html" %}
 {% block body %}
 
-    <div class="col-md-4">
+    <div class="row">
+        <div class="col-md-4">
         <!-- Profile Image -->
             <div class="card card-primary card-outline" class="col-md-4">
               <div class="card-body box-profile">
@@ -35,10 +36,10 @@
     </div>
 
 
-    <div class="row-cols-12">
+
 
         <!--Extra Information Of Employee-->
-            <div class="col-md-6">
+            <div class="col-md-8">
             <div class="card">
 
                 <!-- Employee Personal Details -->
@@ -158,7 +159,7 @@
             <!-- /.card -->
           </div>
 
-    </div>
 
+    </div>
 
 {% endblock %}
