--- a/employee_master/templates/employee_master/employee_form.html
+++ b/employee_master/templates/employee_master/employee_form.html
@@ -2,7 +2,8 @@
 {% load static %}
 {% load crispy_forms_field %}
 {% block extra_css %}
-<!-- daterange picker -->
+
+    <!-- daterange picker -->
   <link rel="stylesheet" href="{% static 'plugins/daterangepicker/daterangepicker.css' %}">
 
 {% endblock %}
@@ -10,7 +11,7 @@
             <!-- general form elements -->
             <div class="card card-primary">
               <div class="card-header">
-                <h3 class="card-title">Employee Entry Form</h3>
+                <h4 align="center">Employee Entry Form</h4>
               </div>
               <!-- /.card-header -->
               <!-- form start -->
@@ -467,8 +468,6 @@
 
                 </div>
 
-
-
                 </div>
                 <!-- /.card-body -->
 
@@ -476,9 +475,9 @@
                   <button type="submit" class="btn btn-primary">Submit</button>
                 </div>
               </form>
-                </div>
-              </form>
             </div>
+{#              </form>#}
+{#            </div>#}
             <!-- /.card -->
 
             <!-- general form elements -->
