--- a/expense_detail/templates/expense_detail/expense_detail.html
+++ b/expense_detail/templates/expense_detail/expense_detail.html
@@ -4,6 +4,9 @@
     <h3 class="profile-username text-center"> Expense Details </h3>
 <hr/>
 
+
+    <div class="row">
+
         <div class="col-md-6">
 
             <div class="card card-primary card-outline" class="col-md-4">
@@ -47,7 +50,7 @@
 
     </div>
 
-    <div class="col-md-6">
+        <div class="col-md-6">
 
             <div class="card card-primary card-outline" class="col-md-4">
               <div class="card-body box-profile">
@@ -87,6 +90,8 @@
               </div>
 
             </div>
+
+    </div>
 
     </div>
 
