--- a/nozzlle_transaction/templates/nozzlle_transaction/nozzlle_t_detail.html
+++ b/nozzlle_transaction/templates/nozzlle_transaction/nozzlle_t_detail.html
@@ -3,7 +3,10 @@
 
     <h3 class="profile-username text-center"> Nozzlle Transaction Details </h3>
 <hr/>
-    <div class="col-md-5">
+
+    <div class="row">
+
+            <div class="col-md-4">
 
             <div class="card card-primary card-outline" class="col-md-4">
               <div class="card-body box-profile">
@@ -50,7 +53,7 @@
 
     </div>
 
-    <div class="col-md-5">
+            <div class="col-md-4">
 
             <div class="card card-primary card-outline" class="col-md-4">
               <div class="card-body box-profile">
@@ -92,7 +95,7 @@
             </div>
     </div>
 
-    <div class="col-md-5">
+            <div class="col-md-4">
 
             <div class="card card-primary card-outline" class="col-md-4">
               <div class="card-body box-profile">
@@ -128,6 +131,9 @@
               </div>
 
             </div>
+    </div>
+
+
     </div>
 
 {% endblock %}
