--- a/nozzlle_transaction/templates/nozzlle_transaction/nozzlle_t_form.html
+++ b/nozzlle_transaction/templates/nozzlle_transaction/nozzlle_t_form.html
@@ -10,7 +10,7 @@
             <!-- general form elements -->
             <div class="card card-primary">
               <div class="card-header">
-                <h3 class="card-title"> Nozzlle Transaction Entry Form </h3>
+                <h4 align="center"> Nozzlle Transaction Entry Form </h4>
               </div>
               <!-- /.card-header -->
               <!-- form start -->
