--- a/rates/templates/rates/rate_form.html
+++ b/rates/templates/rates/rate_form.html
@@ -10,7 +10,7 @@
             <!-- general form elements -->
             <div class="card card-primary">
               <div class="card-header">
-                <h3 class="card-title"> Petrol/Diesel Daily Table </h3>
+                <h4 align="center"> Daily Rates Entry Form </h4>
               </div>
               <!-- /.card-header -->
               <!-- form start -->
