--- a/tank_master/templates/tank_master/tank_detail.html
+++ b/tank_master/templates/tank_master/tank_detail.html
@@ -3,7 +3,10 @@
 
     <h3 class="profile-username text-center"> Tank Details </h3>
 <hr/>
-    <div class="col-md-6">
+
+    <div class="row">
+
+         <div class="col-md-6">
 
             <div class="card card-primary card-outline" class="col-md-4">
               <div class="card-body box-profile">
@@ -33,7 +36,7 @@
 
     </div>
 
-    <div class="col-md-6">
+        <div class="col-md-6">
 
             <div class="card card-primary card-outline" class="col-md-4">
               <div class="card-body box-profile">
@@ -64,6 +67,8 @@
               </div>
 
             </div>
+    </div>
+
     </div>
 
 {% endblock %}
